--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "next": "^14.2.32",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
-    "puppeteer": "^24.20.0",
+    "puppeteer-core": "^24.36.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
